syntax = "proto3";

package main;

option go_package = "./;main";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

message IncrRequest {
  int32 num = 1;
}

message IncrResponse {
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc Incr(IncrRequest) returns (IncrResponse);
  rpc Pubsub(stream PubsubArgs) returns (stream PubsubReply);
  rpc ClientStream(stream ClientStreamArgs) returns (ClientStreamReply);
  rpc ServerStream(ServerStreamArgs) returns(stream ServerStreamReply);
}

message PubsubArgs {
  string data = 1;
}

message PubsubReply {
  string data = 1;
}

message ClientStreamArgs {
  string value = 1;
}

message ClientStreamReply {
  string value = 1;
}

message ServerStreamArgs {
  string value = 1;
}

message ServerStreamReply {
  string value = 1;
}